# hawabot_learn

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  GO_TO_MARKET.md  IMPLEMENTATION_PLAN.md  NEXT_TASK.md  PRICING.md  SAVE_STATE.md  STRATEGY.md
docs/reference_robot/: dynamixel_limits.json  servo_mapping.json
firmware/pico_w/: main.py
hawabot/: __init__.py  robot.py  teach.py
hawabot/character/: animations.py  profile.py
hawabot/character/profiles/: default.yaml
hawabot/config/: tiers.py
hawabot/drivers/: base.py  mock.py  pi5.py  pico.py
hawabot/joints/: arm.py  base.py  head.py  leg.py  waist.py
hawabot/sim/: engine.py  logger.py  visualizer.py
hawabot_reference/: REFERENCE.md  robot_description.json  standing_pose.json
pipeline/: COMPONENT_REFERENCE.md  INTERFACE_SPEC.md  SHELL_PIPELINE_SPEC.md  SKELETON_SPEC.md  SOLIDWORKS_BUILD_GUIDE.md  dissect.py  generate_3d.py  generate_skeleton_step.py  hollow.py  joint_cuts.py  magnets.py  preview.py  shell_pipeline.py  skeleton.py  validate.py
pipeline/skeleton_exports/: HawaBot_Spark_Skeleton_Parameters.xlsx  equations.txt  equations_250mm.txt  hawabot_ssp_macro.bas  magnet_6x3_reference.step  mg90s_reference.step  sg90_reference.step  spark_skeleton_frame.step
web/: app.py
web/templates/: index.html
